# custom-allocators-cpp

./: CMakeLists.txt  README.md  run_tests.bat
src/: DoubleStackAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp  address_list.cpp  double_stack_allocator.cpp  main.cpp  pool_allocator.cpp  stack_allocator.cpp
src/include/: PoolAllocator.h  StackAllocator.h  address_list.h  double_stack_allocator.h  memory_utils.h  pool_allocator.h
tests/: CMakeLists.txt  double_stack_allocator.test.cpp  main.cpp  pool_allocator.test.cpp  stack_allocator.test.cpp
